# rpc_chat_system

./: README.md  autobuild.sh
client/: CMakeLists.txt  autobuild.sh
client/include/: Group.hpp  User.hpp
client/src/: main.cpp
friend_rpc/: CMakeLists.txt
friend_rpc/include/: FriendService.hpp  RPCHeader.pb.h
friend_rpc/include/model/: FriendModel.hpp  UserModel.hpp
friend_rpc/rpc/include/: AsyQueue.hpp  MpRPCController.hpp  RPCProvider.hpp
friend_rpc/src/: FriendService.cpp  main.cpp
friend_rpc/src/db/: CommonConnectionPool.cpp  db.cpp
friend_rpc/src/model/: FriendModel.cpp
group_rpc/config/: host.conf
group_rpc/include/: GroupService.hpp
group_rpc/include/db/: CommonConnectionPool.hpp
group_rpc/include/model/: GroupModel.hpp  GroupUser.hpp
group_rpc/rpc/include/: Logger.hpp  MpRPCChannel.hpp  MpRPCConfig.hpp  RPCConf.pb.h
group_rpc/src/: CMakeLists.txt  GroupService.cpp  RPCHeader.pb.cc  main.cpp
group_rpc/src/db/: Connection.cpp
group_rpc/src/model/: GroupModel.cpp
user_rpc/: CMakeLists.txt  autobuild.sh
user_rpc/config/: RPCHeader.proto  host.conf  mysql.yml
user_rpc/include/: ChatException.hpp  ChatServer.hpp  ChatService.hpp  public.hpp
user_rpc/include/db/: Connection.hpp  db.hpp
user_rpc/include/map/: unlock_hash_table.hpp  unlock_unordered_map.hpp
user_rpc/include/model/: OfflineMessageModel.hpp
user_rpc/include/redis/: redis.hpp
user_rpc/rpc/include/: MpRPCApplication.hpp  ZkClient.hpp
user_rpc/src/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
user_rpc/src/model/: OfflineMessageModel.cpp  (+1 more)
(+1 files in other folders)
